# CMake

Ep002/: CMakeLists.txt  main.cpp
Ep005/source/: CMakeLists.txt  main.cpp
Ep007/source/: CMakeLists.txt  main.cpp
Ep007/source/include/: dog.h
Ep007/source/logger/include/: log.h
Ep007/source/logger/src/: log.cpp
Ep007/source/src/: dog.cpp
Ep008/: CMakeLists.txt
Ep008/src/: main.cpp
Ep009/: CMakeLists.txt
Ep009/src/stats/: stats.cmake  stats.cpp
Ep009/src/stats/include/: stats.h
